# moped

./: README.md
BundlerPy/: Bundler.py  Makefile  RunBundler.sh  RunBundlerCustom.sh  manifest.xml
BundlerPy/lib/ann_1.1_char/: Make-config  Makefile
BundlerPy/src/: ImageData.cpp
imagesender/: _launch.imagesender  _launch.imagesenderlist  _launch.imagesendertest  imagesender.py  imagesenderlist.py  mainpage.dox  manifest.xml
meanshiftpy/: CMakeLists.txt  mainpage.dox  manifest.xml
meanshiftpy/src/: CMakeLists.txt  Makefile  meanshift.py  meanshiftpy.cpp
moped-example/: _launch.imagesenderlist  _launch.moped2  mainpage.dox  manifest.xml  moped-example.launch
moped-example/test/: images_list.txt
moped-modeling-py/: CMakeLists.txt  Camera.py  mainpage.dox  manifest.xml  tf_format.py
moped-modeling-py/cam_examples/: cam_sx10_1600.yaml  dragonfly_calibration.yaml  dragonfly_wide_calibration.yaml  kinect_calibration.yaml
moped-modeling-py/examples/: download_examples.sh
moped-modeling-py/src/: CMakeLists.txt  MaskReader.py  MopedModeling.py  config_modeling.yaml  cvundistort.cpp  descutils.py  generate_model.py  imundistort.cpp  imundistort.py  mayavi_plotting.py  options_modeling.yaml  siftpy.py  utils.py
moped2/: CMakeLists.txt  README.txt  download_models.sh  find_opencv2.sh  manifest.xml  moped.cpp  moped_test.cpp  rosdep.yaml  rosdoc.yaml
moped2/libmoped/: Makefile
moped2/libmoped/include/: moped.hpp  sXML.hpp
moped2/libmoped/samples/camera/: camera.cpp
moped2/libmoped/samples/createModels/: createModels.cpp
moped2/libmoped/samples/files/: files.cpp
moped2/libmoped/src/: ALGORITHM_TEMPLATE.hpp  GLOBAL_DISPLAY.hpp  STATUS_DISPLAY.hpp  config.hpp  moped.cpp  util.hpp
moped2/libmoped/src/cluster/: CLUSTER_CUSTOM_CPU.hpp  CLUSTER_DISPLAY.hpp  CLUSTER_MEAN_SHIFT_CPU.hpp
moped2/libmoped/src/feat/: FEAT_DISPLAY.hpp  FEAT_SIFT_CPU.hpp  FEAT_SIFT_GPU.hpp  FEAT_SURF_CPU.hpp
moped2/libmoped/src/filter/: FILTER_PROJECTION_CPU.hpp
moped2/libmoped/src/match/: MATCH_ANN_CPU.hpp  MATCH_BRUTE_CPU.hpp  MATCH_DISPLAY.hpp  MATCH_FLANN_CPU.hpp  MATCH_HASH2_CPU.hpp  MATCH_HASH_CPU.hpp
moped2/libmoped/src/pose/: POSE_DISPLAY.hpp  POSE_GRAD_CPU.hpp  POSE_LBFGS_CPU.hpp  POSE_LM_CPU.hpp  POSE_RANSAC_GRAD_DIFF_REPROJECTION_CPU.hpp  POSE_RANSAC_LBFGS_REPROJECTION_CPU.hpp  POSE_RANSAC_LM_DIFF_CPU.hpp  POSE_RANSAC_LM_DIFF_REPROJECTION_CPU.hpp  RANSAC_base.hpp
moped2/libmoped/src/util/: UTIL_UNDISTORT.hpp
moped2/modeling/: add_modeling_paths.m  compile_all.m  cvundistort.cpp  cvundistort.h  default.m  draw_camera.m  draw_mask.m  format_rot.m  getCameraPos.m  imundistort_folder.m  imundistort_mc.m  modeling.dox  projectPts.m  rodrigues.cpp  rot2rpy.m  rotmat.m  sfm_alignment_gui.m  sfm_bundler.m  sfm_bundler_book.m  sfm_bundler_planar.m  sfm_filter_idx.m  sfm_filter_pts.m  sfm_get_error.m  sfm_transform_ext.m  sfm_view.m  sift.m  sift2.m  sift_mc.m
moped2/modeling/meanshift/: meanShift1.c
moped2/test/: run_test_moped.py
moped2/test_data/: timing.bag
moped3d/: CMakeLists.txt  download_models.sh  find_opencv2.sh  mainpage.dox  manifest.xml  moped.cpp  moped3d.cpp  moped_test.cpp  readme  rosdep.yaml  startkinect.launch  startmoped.launch
moped3d/libmoped/: Makefile
moped3d/libmoped/include/: moped.hpp
moped3d/libmoped/libs/: libs.tgz
moped3d/libmoped/src/: Benchmark.cpp  Benchmark.hpp  GLOBAL_DISPLAY.hpp  MopedBench.cpp  MopedBench.hpp  config.hpp  highres.config.hpp  lowres.config.hpp  moped.cpp  util.hpp
moped3d/libmoped/src/cluster/: CLUSTER_GOLD_CPU.hpp  CLUSTER_LINKAGE_CPU.hpp  CLUSTER_MEAN_SHIFT_CPU.hpp  CLUSTER_WEIGHTED_MEAN_SHIFT_CPU.hpp
moped3d/libmoped/src/depthVerify/: DEPTH_VERIFY_CPU.hpp
moped3d/libmoped/src/depthfill/: DEPTH_FILL_EXACT_CPU.hpp  DEPTH_NO_FILL_CPU.hpp
moped3d/libmoped/src/depthfilter/: DEPTHFILTER_CPU.hpp  DEPTHFILTER_CPU.hpp.backup  DEPTHFILTER_IGNORE_CPU.hpp
moped3d/libmoped/src/depthprop/: DEPTHMAP_PROP_CPU.hpp
moped3d/libmoped/src/feat/: FEAT_SIFT_CPU.hpp  FEAT_SIFT_GPU.hpp  FEAT_SURF_CPU.hpp
moped3d/libmoped/src/filter/: FILTER_PROJECTION_CPU.hpp  FILTER_PROJECTION_DEPTH_CPU.hpp
moped3d/libmoped/src/match/: MATCH_ADAPTIVE_FLANN_CPU.hpp  MATCH_ANN_CPU.hpp  MATCH_BRUTE_CPU.hpp  MATCH_FLANN_CPU.hpp  MATCH_HASH2_CPU.hpp  MATCH_HASH_CPU.hpp
moped3d/libmoped/src/pose/: POSE_RANSAC_LM_DIFF_BACKPROJECTION_DEPTH_CPU.hpp  POSE_RANSAC_LM_DIFF_REPROJECTION_CMIN_CPU.hpp  POSE_RANSAC_LM_DIFF_REPROJECTION_CPU.hpp  POSE_RANSAC_LM_DIFF_REPROJECTION_DEPTH_CPU.hpp
moped3d/modeling/: compile_all.m  draw_camera_2d.m  draw_mask.m  example_cam.mat  imundistort.cpp  imundistort.m  imundistort_folder.m  matlab_cv.cpp  matlab_cv.h  modeling.dox  quat2rot.cpp  quat2rot.m  rot2quat.m  rpy2rot.m  sfm_alignment_gui.fig  sfm_bundler.m  sfm_export_xml.m  sfm_filter_idx.m  sfm_model.m  sfm_options.m
moped3d/modeling/examples/: download_examples.sh
moped3d/modeling/meanshift/: meanShift1.c
pyublas/: CMakeLists.txt  mainpage.dox  manifest.xml
pyublas/EGG-INFO/: SOURCES.txt  native_libs.txt
pyublas/pyublas/: _internal.py  testhelp_ext.py
pyublas/src/: Makefile  siteconf.py
pyublas/src/PyUblas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
